Create service added and tested, to finish read_service
